# multi_robot_rosbot

./: CMakeLists.txt  README.md  package.xml
OLD_SCRIPTS/: nav_through_poses.py  robot_navigator.py  trayectoria_astar.py  trayectoria_astar_modif.py
config/: nav2_params_sim_rosbot1.yaml  nav2_params_sim_rosbot2.yaml  ps4.config.yaml  slam_toolbox_sim.yaml
config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
config/log/: latest_build
include/merge_map/: merge_map.h
launch/: bringup.launch.py  gazebo.launch.py  gmapping.launch.py  mapping_rosbot_1.launch.py  mapping_rosbot_2.launch.py  navigation_rosbot_1.launch.py  navigation_rosbot_2.launch.py  ps4_real.launch.py  ps4_sim.launch.py  rviz2.launch.py  spawn_rosbot_1.launch.py  spawn_rosbot_2.launch.py
models/: rosbot1.sdf  rosbot2.sdf
rviz/: mi_configuracion.rviz  robot1.rviz  robot2.rviz
scripts/: control.py  goal_publisher.py  publisher_member_function.py  trayectoria_astar_modif.py  trayectoria_rrt.py
src/: merge_map.cpp
urdf/: rosbot.gazebo  rosbot.urdf  rosbot.xacro
worlds/: Simple_house.world  solar.world  solar2.world  solar_simple.world
